force-app/main/default/objects/Commitment__c/Commitment__c.object-meta.xml
<CustomObject>
    <description>Data on funds allocated to non profit organizations that have been requested through the First National.com website</description>
    <label>Commitment</label>
    <nameField>
        <displayFormat>MC{0000000000}</displayFormat>
        <label>Commitments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commitments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>