force-app/main/default/objects/Commitment__c/fields/Community_Investment__c.field-meta.xml
<CustomField>
    <fullName>Community_Investment__c</fullName>
    <label>Community Investment</label>
    <referenceTo>Community_Giving__c</referenceTo>
    <relationshipLabel>Commitments</relationshipLabel>
    <relationshipName>Commitments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>