force-app/main/default/objects/Commitment__c/fields/Non_Profit_Organization__c.field-meta.xml
<CustomField>
    <fullName>Non_Profit_Organization__c</fullName>
    <formula>Community_Investment__r.Non_Profit_Organization__r.Name</formula>
    <label>Non Profit Organization</label>
    <type>Text</type>
</CustomField>