force-app/main/default/objects/Commitment__c/fields/Payed_Date__c.field-meta.xml
<CustomField>
    <fullName>Payed_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Payed Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>